fix post layout issue with images

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -86,6 +86,18 @@
   @apply mb-4 text-sm font-normal text-gray-500;
 }
 
+.wp-caption {
+  @apply max-w-full;
+}
+
+.wp-caption img {
+  @apply object-cover w-auto rounded h-80 md:h-128 lg:h-140;
+}
+
+.wp-caption-text {
+  @apply mb-4 text-sm font-normal text-gray-500;
+}
+
 .money-saving {
   @apply px-4 py-2 my-4 bg-blue-100 rounded-lg md:py-4 md:px-8;
 }
